# rug

./: .gitignore  CRATE_DOCS.md  Cargo.toml  INSTALL.md  LICENSE  README.md  rug.example.toml
skill/: review-until-green.md
skills/review-until-green/: SKILL.md
src/: config.rs  github.rs  lib.rs  main.rs  pr.rs  state.rs  types.rs  verdict.rs
