[package]
name = "review-until-green"
version = "0.1.0"
edition = "2024"
authors = ["merklefruit <merklefruit@proton.me>"]
description = "Compact PR review state for coding agents"
repository = "https://github.com/merklefruit/rug"
license = "MIT"

[[bin]]
name = "rug"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
